# parsec-webs

./: .gitignore  Cargo.toml  LICENSE  MERGE_NOTES.md  README.md  SETUP.md
.github/workflows/: build.yml
android/: build.gradle.kts  gradlew  gradlew.bat  local.properties.example  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/os/parsec/browser/: ParsecApplication.kt  ParsecCore.kt  ResourceBlocker.kt
android/app/src/main/java/os/parsec/browser/adapter/: SuggestionAdapter.kt
android/app/src/main/java/os/parsec/browser/service/: DownloadService.kt
android/app/src/main/java/os/parsec/browser/ui/: BrowserActivity.kt  BrowserPanelFragment.kt  MenuBottomSheet.kt  ParsecJsBridge.kt  SitePermissionsSheet.kt  TabSwitcherBottomSheet.kt
android/app/src/main/res/drawable/: tab_count_bg.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
browser/: index.html  package-lock.json  package.json  shader_cache_key.txt  tsconfig.json  tsconfig.node.json  vite.config.ts
browser/extensions/: chrome-compat.js
browser/gpu-renderer/: Cargo.toml
browser/gpu-renderer/src/: lib.rs
browser/gpui/renderer/: neutron_bridge.rs
browser/gpui/src/: glyphTable.js  glyphTable.ts  index.js  index.ts  index.tsx  renderer.js  renderer.ts  scene.js  scene.ts
browser/metal/: neutron.metal
browser/src/: ParsecWeb.js  ParsecWeb.tsx  main.js  main.tsx
browser/src-tauri/: Cargo.toml  build.rs
browser/src-tauri/src/: background_worker.rs  blocker.rs  cdp_devtools.rs  certs.rs  extension_runtime.rs  extension_store.rs  main.rs  network.rs  neutron.rs  neutron_bridge.rs  neutron_metal.rs  profile.rs  request_interceptor.rs  sdf_rasteriser.rs  sync.rs  tab_manager.rs
browser/webkit-build/: build.sh
browser/webkit-patches/: 0001-parsec-network-intercept.patch  0002-parsec-cdp-server.patch  0003-parsec-custom-apis.patch  0004-parsec-service-worker-intercept.patch  0005-parsec-compat-apis.patch  0006-parsec-jsc-tuning.patch  0007-parsec-midtier-jit.patch  0008-parsec-pointer-compression.patch  0009-parsec-type-feedback.patch  0010-parsec-complete-integration.patch  0011-parsec-neutron-compositor.patch  0012-parsec-simd.patch  0013-parsec-jit-cache.patch
gpu-renderer/: Cargo.toml
gpu-renderer/src/: lib.rs
src-rust/: Cargo.toml
src-rust/src/: blocker.rs  extension_store.rs  ipc.rs  lib.rs  network.rs  neutron_android.rs  permission_manager.rs  phantom.rs  profile.rs  sdf_rasteriser.rs  smart_cache.rs  sync.rs
