# ── Nested workspace — keeps the desktop Tauri crate independent
# from the root Android workspace (which has its own gpu-renderer).
# This prevents the "two packages named parsec-gpu-renderer" conflict.
[workspace]
members  = ["."]
resolver = "2"

[package]
name    = "parsec-web"
version = "1.1.0"
edition = "2021"
description = "Parsec Web v1.3 — Custom WebKit engine, PMJ mid-tier JIT, pointer compression, enhanced type feedback, full CDP DevTools, complete Chrome API"

[[bin]]
name = "parsec-web"
path = "src/main.rs"

[dependencies]
# ── Windowing + per-tab native WebViews ──────────────────────────
wry = { version = "0.37" }
tao = { version = "0.26", features = ["rwh_06"] }

# ── Neutron GPU renderer ─────────────────────────────────────────
# The full production Neutron pipeline: SceneBuffer chrome layer +
# GlyphFrame tab viewport layer, both composited via wgpu.
parsec-gpu-renderer = { path = "../gpu-renderer" }
wgpu_text           = "=0.8.7"

# ── HTTP/3 + QUIC ─────────────────────────────────────────────────
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls", "http2", "gzip", "brotli", "deflate", "stream", "json",
] }

# ── CDP WebSocket client ──────────────────────────────────────────
# Used by cdp_devtools.rs to connect to our patched WebKit's CDP server
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# ── Async ─────────────────────────────────────────────────────────
tokio        = { version = "1", features = ["full"] }
futures-util = "0.3"

# ── TLS ───────────────────────────────────────────────────────────
rustls              = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.7"

# ── Neutron GPU ───────────────────────────────────────────────────
wgpu              = "0.19"
pollster          = "0.3"
bytemuck          = { version = "1.14", features = ["derive"] }
ab_glyph          = "0.2"
raw-window-handle = "0.6"

# ── CRX / Extension store ─────────────────────────────────────────
zip  = { version = "0.6", default-features = false, features = ["deflate"] }
sha2 = "0.10"

# ── Serialisation ─────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── URL ───────────────────────────────────────────────────────────
url              = "2"
percent-encoding = "2"
mime_guess       = "2"

# ── Utilities ─────────────────────────────────────────────────────
once_cell   = "1"
parking_lot = "0.12"
dirs        = "5"
opener      = "0.7"
base64      = { version = "0.22", features = ["alloc"] }
anyhow      = "1"
ring        = "0.17"

# ── E2E Sync encryption ───────────────────────────────────────────
# XChaCha20-Poly1305 AEAD + Argon2id key derivation
chacha20poly1305 = { version = "0.10", features = ["std"] }
argon2           = { version = "0.5", features = ["std"] }
getrandom        = { version = "0.2", features = ["std"] }

# ── Logging ───────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── macOS: Direct Metal path ─────────────────────────────────────
# Bypasses wgpu for Safari-parity rendering performance.
# Only compiled on macOS targets.
[target.'cfg(target_os = "macos")'.dependencies]
metal         = "0.27"
objc2         = "0.5"
core-graphics = "0.23"

[build-dependencies]
# Checks if forked WebKit is available; emits link flags if so
# (see build.rs)

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true

[profile.dev]
opt-level = 1
